--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
 :root {
     --green: #07d13d;
     --red: #dc4d3d;
+    --light-gray: #fafafa;
+    --dark-gray: #eeeeee;
     --text-color: #202020;
     font-size: 14px;
 }
@@ -31,7 +33,7 @@ header {
 }
 
 .sidebar {
-    background-color: #fafafa;
+    background-color: var(--light-gray);
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     padding: 1rem 0.5rem;
@@ -87,7 +89,7 @@ header {
     font-size: 1rem;
     padding: 7px;
     border-radius: 3px;
-    background-color: #eeeeee;
+    background-color: var(--dark-gray);
     cursor: pointer;
     transition: all 0.1s ease;
 }
@@ -107,6 +109,17 @@ header {
     align-items: center;
 }
 
+#items-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
 .todo-item {
     list-style-type: none;
+    min-width: 80%;
+    border: 1px solid var(--dark-gray);
+    border-radius: 3px;
+    padding: 0.3rem 0.6em;
 }
